Add GC comparison demo, Compact Object Headers demo note, Virtual Threads/Vector API demo ideas, and AhaSlides link
- code/gc-comparison: Gradle project (Java 26) comparing G1, G1+NUMA, ZGC,
  and Shenandoah on the same latency-sensitive allocation workload.
  Verified locally: G1 max ~2.0ms vs ZGC ~0.37ms vs Shenandoah ~0.42ms;
  G1+NUMA matches G1 baseline as expected on this single-socket machine.
- Plan: link the demo code from each GC's Demo idea note, point the
  Compact Object Headers demo at the existing project_liliput code, add
  demo ideas for Virtual Threads and Vector API, and link the AhaSlides
  interlude presentation.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>